fixed overflow

--- a/roman-nameral/src/index.css
+++ b/roman-nameral/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  overflow: hidden;
   /* background-color: crimson; */
   background-image:
   linear-gradient(to bottom, rgba(255,255,0,0.5), rgba(0,0,255,0.5)),
